# drum-detection

./: CMakeLists.txt  bibilography.txt  map.csv
detector/: CMakeLists.txt  delta_ratio.cpp  delta_ratio.hpp  delta_ratio.mrs  detector.cpp  detector.mrs  detector_core.mrs  onset_features.mrs  onset_features2.mrs  onset_function.mrs  onsets.mrs  threshold.cpp  threshold.hpp
midi2csv/: CMakeLists.txt
midi2csv/src/: CMakeLists.txt  app.cpp  app.h  csv.cpp  csv.h  file.cpp  main.cpp  map.h  midi2csv.cpp  midi2csv.h  midicsv.cpp  midicsv.h  midifile.cpp  midifile.h
observations/: onset_detection.txt
performance/: CMakeLists.txt
performance/src/: CMakeLists.txt  file.cpp  file.h  main.cpp  map.cpp  map.h  midicsv.cpp  midicsv.h  midifile.cpp  midifile.h  object.cpp  object.h  paa.cpp  paa.h
run/: complete.sh  detect.sh  evaluate.sh
vamp_plugins/: CMakeLists.txt  centroid.mrs  onset_function.mrs  onsets.mrs  rms.mrs  vamp_marsyas_plugin.cpp  vamp_marsyas_plugin.hpp
